# OpenGLRenderer

./: .clang-format  CMakeLists.txt  LICENSE  README.md  _config.yml  documentation.md  imgui.ini  optimization_guide_ben.md  todo.md
Debug/: imgui.ini
Resources/Models/Crab/: crab.dae
Resources/Models/Water/: waterplane.mtl
Shaders/: frag.fs  grass_frag.fs  grass_vert.vs  light_source_frag.fs  light_source_vertex.vs  particle.fs  particle.vs  postprocess2D.fs  postprocess2D.vs  postprocess_frag.fs  postprocess_vert.vs  skybox.fs  skybox.vs  sprite.fs  sprite.vs  toon.fs  toon.vs  vert.vs  water.fs  water.vs
docs/: advanced_lighting.md  advanced_opengl.md  index.md  optimization_guide_ben.md
documentation/: advanced_lighting.md  todo.md
include/glad/: glad.h
src/: Camera.h  Mesh.cpp  Model.cpp  Model.h  Shader.cpp  Shader.h  SlyMath.H  Texture.cpp  Texture.h  glad.c  imgui.ini  main.cpp  main.h
src/engine/: Camera.h  Direction.h  Engine.cpp  Engine.h  Logger.cpp  Logger.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Particles.cpp  Particles.h  PostProcessor.cpp  PostProcessor.h  ResourceLoader.cpp  ResourceLoader.h  Shader.cpp  Shader.h  ShaderReloader.cpp  ShaderReloader.h  SlyMath.H  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Vector.h  stb_image.cpp  stb_image.h
src/game/: BallObject.cpp  BallObject.h  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  PowerUp.h
src/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h
(+18 files in other folders)
